Allow unused members

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,6 @@ toml = "0.5.9"
 trust-dns-resolver = "0.21.2"
 ureq = { version = "2.4.0", features = ["json"] }
 uritemplate-next = "0.2.0"
+
+[lints.rust]
+unused = "allow"
