--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ serde_json = "1.0.79"
 snafu = "0.7.0"
 symlink = "0.1.0"
 termcolor = "1.1.3"
+thiserror = "2.0.14"
 toml = "0.5.9"
 trust-dns-resolver = "0.21.2"
 ureq = { version = "2.4.0", features = ["json"] }
